# test-photoniq-auth-client

./: CMakeLists.txt
cmake/: Config.cmake.in  external-projects.cmake
include/photoniq_auth_client/: AuthRestClient.h  AuthValidator.h
src/: AuthRestClient.cpp  AuthValidator.cpp
tests/: AuthValidatorTests.cpp  CMakeLists.txt
